Import of ELISHEVA/Exception-Lite-0.999_004 from CPAN.
gitpan-cpan-distribution: Exception-Lite
gitpan-cpan-version:      0.999_004
gitpan-cpan-path:         ELISHEVA/Exception-Lite-0.999_004.tar.gz
gitpan-cpan-author:       ELISHEVA
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
-Revision history for Exception-Lite-0.999_003
+Revision history for Exception-Lite-0.999_004
 
-0.999_003 2011-02-07
+0.999_004 2011-02-08
+
+    - updated warning type detection code to take into account change
+      in sprintf warnings starting with 5.12
+
+0.999_003 2010-02-07
 
     - removed unnecessary and unintended thread dependencies
 
